refactor: Refactor employee API to use DTOs and add create endpoint
Replaces EmployeeDTO with EmployeeRequestDTO and EmployeeResponseDTO, introduces EmployeeMapper for entity-DTO conversion, and updates EmployeeController and EmployeeService to use these DTOs. Adds a POST endpoint for employee creation, refactors model and repository classes for consistency, and introduces RoleRepository for role lookup.