@@ -1,61 +1,48 @@
 package com.imperial.hotel.auth.service;
 
-import com.imperial.hotel.auth.dto.EmployeeDTO;
+import com.imperial.hotel.auth.dto.EmployeeResponseDTO;
+import com.imperial.hotel.auth.dto.EmployeeRequestDTO;
+import com.imperial.hotel.auth.mapper.EmployeeMapper;
 import com.imperial.hotel.auth.model.Employee;
+import com.imperial.hotel.auth.model.Role;
 import com.imperial.hotel.auth.repository.EmployeeRepository;
+import com.imperial.hotel.auth.repository.RoleRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class EmployeeService {
 
     private final EmployeeRepository employeeRepository;
+    private final RoleRepository roleRepository;
+    private final EmployeeMapper mapper;
 
     @Transactional(readOnly = true)
-    public List<EmployeeDTO> getAllEmployees() {
-        return employeeRepository.findAllWithRoles()
+    public List<EmployeeResponseDTO> findAll() {
+        return employeeRepository.findAll()
                 .stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .map(mapper::toDTO)
+                .toList();
     }
 
-    @Transactional(readOnly = true)
-    public EmployeeDTO getEmployeeById(Long employeeId) {
-        Employee employee = employeeRepository.findByIdWithRole(employeeId)
-                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
-        return convertToDTO(employee);
-    }
+    @Transactional
+    public EmployeeResponseDTO create(EmployeeRequestDTO dto) {
+        Employee employee = mapper.toEntity(dto);
 
-    @Transactional(readOnly = true)
-    public List<EmployeeDTO> getActiveEmployees() {
-        return employeeRepository.findByIsActive(true)
-                .stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
-    }
+        // Buscar rol por nombre
+        Role role = roleRepository.findByName(dto.getRoleName())
+                .orElseThrow(() -> new RuntimeException("Rol no encontrado: " + dto.getRoleName()));
 
-    private EmployeeDTO convertToDTO(Employee employee) {
-        EmployeeDTO dto = new EmployeeDTO();
-        dto.setEmployeeId(employee.getEmployeeId());
-        dto.setFirstName(employee.getFirstName());
-        dto.setLastName(employee.getLastName());
-        dto.setEmail(employee.getEmail());
-        dto.setPhone(employee.getPhone());
-        dto.setIsActive(employee.getIsActive());
-        dto.setCreatedAt(employee.getCreatedAt());
+        employee.setRole(role);
 
-        if (employee.getRole() != null) {
-            EmployeeDTO.RoleDTO roleDTO = new EmployeeDTO.RoleDTO();
-            roleDTO.setRoleId(employee.getRole().getRoleId());
-            roleDTO.setName(employee.getRole().getName());
-            roleDTO.setDescription(employee.getRole().getDescription());
-            dto.setRole(roleDTO);
-        }
+        // Simulamos el hash de contraseña (en real, usar BCrypt)
+        employee.setHashedPassword("{noop}" + dto.getRawPassword());
 
-        return dto;
+        Employee saved = employeeRepository.save(employee);
+        return mapper.toDTO(saved);
     }
 }
